linked 3 created pages to the home page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2><a href="">Honey Glazed Chicken</a></h2>
-    <h2><a href="">Easy Korean Beef Bowl</a></h2>
-    <h2><a href="">Spicy Baked Shrimp</a></h2>
+    <h2><a href="recipe/page1.html">Honey Glazed Chicken</a></h2>
+    <h2><a href="recipe/page2.html">Easy Korean Beef Bowl</a></h2>
+    <h2><a href="recipe/page3.html">Spicy Baked Shrimp</a></h2>
 </body>
 </html>
