updated the readme file.

--- a/recipe/page2.html
+++ b/recipe/page2.html
@@ -10,7 +10,7 @@
 
     <h1>Easy Korean Beef Bowl</h1>
 
-    <img src="/img/page2" alt="Easy Korean Beef Bowl" height="300px" width="300px">
+    <img src="/images/page2" alt="Easy Korean Beef Bowl" height="300px" width="300px">
 
     <h2>Description</h2>
     <p>This delicious Korean beef bowl is quick and easy to make with ground beef. It's seasoned with fresh ginger, garlic, soy, sesame seeds, and crushed red pepper, but these ingredients can easily be adjusted to suit your taste. Serve over warm rice or spiralized vegetables.</p>
