--- a/recipe/page3.html
+++ b/recipe/page3.html
@@ -10,7 +10,7 @@
 
     <h1>Spicy Baked Shrimp</h1>
 
-    <img src="/img/page3.jpeg" alt="Spicy Baked Shrimp">
+    <img src="/images/page3.jpeg" alt="Spicy Baked Shrimp">
 
     <h2>Description</h2>
     <p>These spicy baked shrimp are made with a perfect blend of spices! So easy and quick to make!</p>
