--- a/recipe/page1.html
+++ b/recipe/page1.html
@@ -10,7 +10,7 @@
 
     <h1>Honey Glazed Chicken</h1>
 
-    <img src="/images/page1.jpeg" alt="Honey Glazed Chicken">
+    <img src="../images/page1.jpeg" alt="Honey Glazed Chicken">
 
     <h2>Description</h2>
     <p>This honey chicken dish is easy to make with just 5 ingredients. I've used this recipe for years, and my family requests it often. Delicious served on steamed rice and garnished with sliced green onions.</p>
